--- a/assets/style.css
+++ b/assets/style.css
@@ -129,6 +129,15 @@ svg {
   color: var(--clr-neutral-900);
 }
 
+@media (width<=50em) {
+  .text-center-small {
+    text-align: center;
+  }
+  .text-center-small p {
+    margin: auto;
+  }
+}
+
 .bg-primary-400 {
   background-color: var(--primary-clr);
 }
@@ -200,7 +209,7 @@ body {
   display: grid;
   gap: var(--spacing-400);
 
-  @media (width >50em) {
+  @media (width>50em) {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
@@ -254,6 +263,7 @@ p[data-width="narrow"] {
     position: fixed;
     top: var(--spacing-650);
     right: var(--spacing-500);
+    z-index: 100;
   }
   .primary-navigation,
   .nav-button {
@@ -265,6 +275,7 @@ p[data-width="narrow"] {
     inset: 7rem var(--spacing-500) auto var(--spacing-500);
     padding-block: var(--spacing-700);
     border-radius: var(--spacing-200);
+    z-index: 100;
   }
   .primary-navigation ul {
     grid-auto-flow: row;
@@ -334,7 +345,7 @@ p[data-width="narrow"] {
   opacity: 0.1;
 }
 
-@media (width < 50em) {
+@media (width<=50em) {
   .cta-items {
     text-align: center;
   }
@@ -375,7 +386,7 @@ p[data-width="narrow"] {
   color: var(--clr-accent-400);
 }
 
-@media (width<50em) {
+@media (width<=50em) {
   .footer-logos {
     display: flex;
     flex-direction: column-reverse;
@@ -405,5 +416,51 @@ p[data-width="narrow"] {
   }
   .copyright {
     text-align: center;
+  }
+}
+
+.numbered-items {
+  list-style: none;
+}
+@media (width<=50em) {
+  .numbered-items {
+    width: fit-content;
+    margin-inline: auto;
+    margin-top: var(--spacing-700);
+  }
+}
+.numbered-items-wrapper {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  column-gap: var(--spacing-400);
+  align-items: baseline;
+  position: relative;
+}
+.numbered-items-numbering {
+  background-color: var(--clr-accent-400);
+  color: var(--clr-neutral-100);
+  padding: var(--spacing-200) var(--spacing-500);
+  border-radius: 100vw;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-400);
+  text-align: center;
+}
+.numbered-items-body {
+  grid-column: 2/3;
+}
+
+@media (width<=30em) {
+  .numbered-items-body {
+    grid-column: 1/3;
+  }
+  .numbered-items-numbering::before {
+    content: "";
+    position: absolute;
+    inset: 0.65rem 0 0 1.25rem;
+    background-color: var(--clr-accent-100);
+    border-radius: 100vw 0 0 100vw;
+    z-index: -1;
+    grid-area: 1/1/2/3;
+    box-shadow: 3rem 0 0 var(--clr-accent-100);
   }
 }
